--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ material = "1.11.0"
 pagingCompose = "3.2.1"
 room = "2.6.1"
 browser = "1.8.0"
+exoplayer = "1.1.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -77,6 +78,10 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room"}
 
 # Custom Tabs
 browser = { group = "androidx.browser", name = "browser", version.ref = "browser"}
+
+# ExoPlayer
+media3-ui = { group = "androidx.media3", name = "media3-ui", version.ref = "exoplayer"}
+media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "exoplayer"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
