Widget functionality implemented.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ pagingCompose = "3.3.0"
 room = "2.6.1"
 browser = "1.8.0"
 exoplayer = "1.3.1"
+glanceWidget = "1.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -82,6 +83,11 @@ browser = { group = "androidx.browser", name = "browser", version.ref = "browser
 # ExoPlayer
 media3-ui = { group = "androidx.media3", name = "media3-ui", version.ref = "exoplayer"}
 media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "exoplayer"}
+
+# Glance Widget
+glance-appwidget = { group = "androidx.glance", name = "glance-appwidget", version.ref = "glanceWidget"}
+glance-material3 = { group = "androidx.glance", name = "glance-material3", version.ref = "glanceWidget"}
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
