Try to sync versionCode with actions.

--- a/.github/workflows/release_production.yml
+++ b/.github/workflows/release_production.yml
@@ -44,7 +44,7 @@ jobs:
         uses: chkfung/android-version-actions@v1.2.3
         with:
           gradlePath: app/build.gradle.kts
-          versionCode: ${{ github.run_number + 1 }}
+          versionCode: ${{ github.run_number }}
 
       - name: Grant execute permissions for gradlew
         run: chmod +x gradlew
