--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.3.2"
+core = "1.6.1"
 coreTesting = "1.1.1"
 kotlin = "1.9.23"
 coreKtx = "1.13.1"
@@ -106,6 +107,7 @@ mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", versio
 ktor-client-mock = {group = "io.ktor", name = "ktor-client-mock", version.ref = "ktor" }
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
 core-testing = { module = "android.arch.core:core-testing", version.ref = "coreTesting" }
+androidx-core = { module = "androidx.test:core", version.ref = "core" }
 
 
 [plugins]
