--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,7 +29,9 @@ mockk = "1.12.4"
 mockito = "5.12.0"
 mockitoKotlin = "5.4.0"
 runner = "1.6.1"
+timber = "5.0.1"
 truth = "1.0.1"
+logbackClassic = "1.5.6"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -44,6 +46,7 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 androidx-material-icons = { group = "androidx.compose.material", name = "material-icons-extended"}
 androidx-viewmodel-compose = {group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx"}
+androidx-core = { module = "androidx.test:core", version.ref = "core" }
 
 # ktor
 ktor-core = { group = "io.ktor", name = "ktor-client-core", version.ref = "ktor" }
@@ -92,8 +95,10 @@ media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", versi
 glance-appwidget = { group = "androidx.glance", name = "glance-appwidget", version.ref = "glanceWidget"}
 glance-material3 = { group = "androidx.glance", name = "glance-material3", version.ref = "glanceWidget"}
 
-# Test Libraries
+# Timber
+timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timber" }
 
+# Test Libraries
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -107,7 +112,7 @@ mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", versio
 ktor-client-mock = {group = "io.ktor", name = "ktor-client-mock", version.ref = "ktor" }
 truth = { module = "com.google.truth:truth", version.ref = "truth" }
 core-testing = { module = "android.arch.core:core-testing", version.ref = "coreTesting" }
-androidx-core = { module = "androidx.test:core", version.ref = "core" }
+logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logbackClassic" }
 
 
 [plugins]
